deploy/kubernetes/base/user-runtime.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-runtime
  labels:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: user-runtime
spec:
  ports:
    - name: loader
      port: 8081
      targetPort: loader
    - name: internal
      port: 8088
      targetPort: internal
  selector:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: user-runtime
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-runtime
  labels:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: user-runtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wdl
      app.kubernetes.io/component: user-runtime
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wdl
        app.kubernetes.io/component: user-runtime
    spec:
      containers:
        - name: redis-proxy
          image: docker.io/getwdl/wdl-rust:latest
          imagePullPolicy: Always
          command: ["/redis-proxy"]
          ports:
            - name: redis-proxy
              containerPort: 7070
          readinessProbe:
            exec:
              command: ["/redis-proxy", "healthcheck"]
          livenessProbe:
            exec:
              command: ["/redis-proxy", "healthcheck"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
        - name: user-runtime
          image: docker.io/getwdl/wdl-workerd:latest
          imagePullPolicy: Always
          command: ["workerd"]
          args:
            - serve
            - -b
            - /app/dist/workerd-configs/user-runtime.bin
            - --experimental
          ports:
            - name: loader
              containerPort: 8081
            - name: internal
              containerPort: 8088
          readinessProbe:
            httpGet:
              path: /_healthz
              port: internal
          livenessProbe:
            httpGet:
              path: /_healthz
              port: internal
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1Gi
